--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,263 +1,695 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+:root {
+    --pc: #1466c3;
+    --bg: #ebebeb;
+    --lc: black;
+    --hv: #efb810;
+    --border: .1rem solid #1466c3;
+}
+
+
+* {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+    text-transform: none;
+    transition: .2s linear;
+}
+
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 9rem;
+    scroll-behavior: smooth;
+}p
+
+html::-webkit-scrollbar {
+    width: .8rem;
+}
+
+html::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: #1466c3;
+    border-radius: 5rem;
+}
+
 body {
-  margin: 0;
-  background-image: url(./Imagenes/Static/fondazo.jpg);
-  color: rgb(0, 0, 0);
-  text-align: center;
-  font-family: Lato, Roboto, sans-serif;
-  font-weight: 400;
+    background: url(../images/312.jpg);
+    background-attachment: fixed;
 }
 
-.principal {
-  float: left;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 80%;
-  height: 100%;
-  background-color: rgb(9, 9, 67);
-  color: rgb(75, 247, 230);
+section {
+    padding: 2rem 7%;
 }
 
-header {
-  top: auto;
-  background-image: url(./Imagenes/Static/fondillo.jpg);
-  background-size: cover;
-  background-position: center center;
-  padding: 15px;
-  text-align: right;
-  color: red;
-  width: auto;
+.heading {
+    border-radius: 15px;
+    background-color: var(--bg);
+    text-align: center;
+    color: var(--lc);
+    text-transform: uppercase;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    font-size: 4rem;
+    text-decoration: underline;
+
 }
 
-h2 {
-  text-align: center;
-  text-decoration: underline;
-  font-weight: bold;
+.heading span {
+    color: var(--hv);
+    text-transform: uppercase;
 }
 
-h3 {
-  text-align: center;
-  text-decoration: underline;
+.btn {
+    margin-top: 1rem;
+    display: inline-block;
+    padding: .9rem 3rem;
+    font-size: 1.7rem;
+    color: var(--lc);
+    background-color: #efb810;
+    cursor: pointer;
 }
 
-ul.topnav {
-  top: auto;
-  height: auto;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: rgb(0, 0, 0);
-  width: 100%;
+.btn:hover {
+    letter-spacing: .1rem;
+    color: var(--lc);
+    background-color: rgb(255, 123, 0);
 }
 
-ul.topnav li {
-  float: left;
-  height: 3rem;
+.header {
+    background-color: var(--bg);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem 7%;
+    border-bottom: var(--border);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
-ul.topnav li a {
-  display: block;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+.header .logo img {
+    height: 6rem;
 }
 
-ul.topnav li a:hover:not(.active) {
-  background-color: rgb(38, 38, 205);
-  color: yellow;
+.header .navbar a {
+    margin: 0 1rem;
+    font-size: 1.6rem;
+    color: var(--pc);
 }
 
-ul.topnav li a.active {
-  background-color: rgb(255, 0, 0);
+.header .navbar a:hover {
+    color: var(--pc);
+    border-bottom: .1rem solid var(--hv);
+    padding-bottom: .5rem;
 }
 
-ul.topnav li.right {
-  float: right;
+.header .iconos div {
+    color: var(--lc);
+    cursor: pointer;
+    font-size: 2.5rem;
+    margin-left: 2rem;
 }
 
-@media screen and (max-width: 600px) {
-
-  ul.topnav li.right,
-  ul.topnav li {
-    float: none;
-  }
+.header .iconos div:hover {
+    color: var(--pc);
 }
 
-.flexPociones {
-  background-color: transparent;
-  border-radius: 25px;
-  border: solid 2px yellow;
-  padding: 10px;
-  margin: 10px;
-  border: solid 2px rgb(9, 9, 67);
-  border-radius: 25px;
-  display: inline-flex;
-  flex-direction: row;
+#menu-btn {
+    display: none;
 }
 
-@media (max-width: 1050px) {
-  .flexPociones {
-    flex-direction: column;
-  }
+.header .search-form {
+    position: absolute;
+    top: 115%;
+    right: 7%;
+    background: var(--bg);
+    width: 50rem;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    transform: scaleY(0);
+    transform-origin: top;
 }
 
-.flexPokeball {
-  background-color: transparent;
-  border-radius: 25px;
-  border: solid 2px yellow;
-  padding: 10px;
-  margin: 10px;
-  border: solid 2px rgb(9, 9, 67);
-  border-radius: 25px;
-  display: inline-flex;
-  flex-direction: row;
+.header .search-form.active {
+    transform: scaleY(1);
 }
 
-@media (max-width: 1050px) {
-  .flexPokeball {
-    flex-direction: column;
-  }
+.header .search-form input {
+    background-color: var(--bg);
+    height: 100%;
+    width: 100%;
+    font-size: 1.6rem;
+    color: var(--pc);
+    padding: 1rem;
+    text-transform: none;
 }
 
-.maps {
-  margin-bottom: 2rem;
+.header .search-form label {
+    color: var(--lc);
+    cursor: pointer;
+    font-size: 2.2rem;
+    margin-right: 1.5rem;
+}
+
+.header .search-form label:hover {
+    color: var(--hv);
+}
+
+.header .cart-items-container {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    height: calc(100vh - 9.5rem);
+    width: 35rem;
+    background-color: var(--bg);
+    padding: 0 1.5rem;
+}
+
+.header .cart-items-container.active {
+    right: 0;
+}
+
+.header .cart-items-container .cart-item {
+    position: relative;
+    margin: 2rem 0;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.header .cart-items-container .cart-item .fa-times {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+    cursor: pointer;
+    color: var(--lc);
+}
+
+.header .cart-items-container .cart-item .fa-times:hover {
+    color: var(--hv);
+}
+
+.header .cart-items-container .cart-item img {
+    height: 7rem;
+}
+
+.header .cart-items-container .cart-item .content h3 {
+    font-size: 2rem;
+    color: var(--lc);
+    padding-bottom: .5rem;
+}
+
+.header .cart-items-container .cart-item .content .price {
+    font-size: 1.5rem;
+    color: var(--pc);
+}
+
+.header .cart-items-container .btn {
+    width: 100%;
+    text-align: center;
+    color: var(--lc);
 }
 
 
-.container {
-  border-radius: 5px;
-  background-color: transparent;
-  padding: 20px;
+.admin {
+    margin-top: 1rem;
+    width: 100%;
+    text-align: center;
+    padding: .9rem 3rem;
+    font-size: 1.7rem;
+    color: var(--lc);
+    background: var(--hv);
+    cursor: pointer;
+    display: none;
 }
 
-input[type=text],
-select,
-textarea {
-  width: 95%;
-  color: black;
-  padding: 12px;
-  border-radius: 4px;
-  border: solid 1px black;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
+.admin:hover {
+    letter-spacing: .2rem;
+    color: var(--lc);
 }
 
-input[type=number],
-select,
-textarea {
-  background-color: rgb(75, 247, 230);
-  width: 95%;
-  padding: 12px;
-  border-radius: 4px;
-  border: solid 1px black;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-  color: black;
-  font-family: Lato, Roboto, sans-serif;
+
+.header .login-form {
+    position: absolute;
+    top: 110%;
+    right: -110%;
+    width: 35rem;
+    box-shadow: var(--box-shadow);
+    padding: 2rem;
+    border-radius: .5rem;
+    background-color: var(--bg);
+    text-align: center;
 }
 
-input[type=password] {
-  background-color: rgb(75, 247, 230);
-  width: 95%;
-  padding: 12px;
-  border-radius: 4px;
-  border: solid 1px black;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-  color: black;
-  font-family: Lato, Roboto, sans-serif;
+.header .login-form.active {
+    right: 2rem;
+    transition: .4s linear;
 }
 
-input[type=submit] {
-  background-color: rgb(75, 247, 230);
-  color: black;
-  padding: 12px 20px;
-  border: solid 1px black;
-  border-radius: 4px;
-  cursor: pointer;
+.header .login-form h3 {
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    color: var(--pc);
 }
 
-input[type=submit]:hover {
-  background-color: greenyellow;
+.header .login-form .eMail {
+    width: 100%;
+    margin: .7rem 0;
+    background-color: #eee;
+    border-radius: .5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--pc);
+    text-transform: none;
 }
 
-footer {
-  color: black;
-  font-weight: 1000;
+.header .login-form .cLave {
+    width: 100%;
+    margin: .7rem 0;
+    background: #eee;
+    border-radius: .5rem;
+    padding: 1rem;
+    font-size: 1.6rem;
+    color: var(--pc);
+    text-transform: none;
 }
 
-.dark-mode {
-  background-color: white;
-  color: black;
+.header .login-form p {
+    display: none;
+    font-size: 1.4rem;
+    padding: .5rem 0;
+    color: red;
 }
 
-input {
-  color: #0099CC;
-  background: rgb(75, 247, 230);
-  border: 2px solid #0099CC;
-  border-radius: 6px;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-  cursor: pointer;
+.inicio {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    background: url(../images/pkmn.gif) no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
-input:hover {
-  background-color: greenyellow;
-  color: white;
+.inicio .content {
+    max-width: 60rem;
 }
 
-table {
-  border: solid 1px gray;
-  background-color: lightgray;
-  border-collapse: collapse;
-  margin: auto;
-  min-width: auto;
-  text-align: center;
-  height: auto;
+.inicio .content h3 {
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: #fff;
+    -webkit-text-stroke: 2px black;
 }
 
-table thead th {
-  background-color: rgb(75, 247, 230);
-  color: black;
+.inicio .content p {
+    font-size: 2rem;
+    font-weight: lighter;
+    line-height: 1.8;
+    padding: 1rem 0;
+    color: var(--pc);
+    -webkit-text-stroke: 1px black;
+
 }
 
-table td,
-table th {
-  padding: 1rem 2rem;
+.about .row {
+    display: flex;
+    align-items: center;
+    background: var(--bg);
+    flex-wrap: wrap;
+    border-radius: 15px;
 }
 
-table tr:hover td {
-  background-color: lightcoral;
-  color: black;
+.about .row .image {
+    flex: 1 1 45rem;
 }
 
-table tr:nth-child(2n+1) {
-  background-color: white;
-  color: black;
+.about .row .image img {
+    width: 100%;
+    border-radius: 15px;
 }
 
-table tr form input[type=submit] {
-  display: inline-block;
-  width: 3rem;
-  font-size: 1.3rem;
-  color: black;
+.about .row .content {
+    flex: 1 1 45rem;
+    padding: 2rem;
 }
 
-table tr {
-  text-align: center;
-  color: black;
+.about .row .content h3 {
+    font-size: 3rem;
+    color: var(--lc);
+}
+
+.about .row .content p {
+    font-size: 1.6rem;
+    color: var(--lc);
+    padding: 1rem 0;
+    line-height: 1.8;
+}
+
+.productos .box-container {
+    background-color: var(--bg);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+    border-radius: 15px;
+}
+
+.productos .box-container .box {
+    padding: 5rem;
+    text-align: center;
+    border: var(--border);
+    margin: 1rem;
+    border-radius: 15px;
+}
+
+.productos .box-container .box img {
+    height: 10rem;
+}
+
+.productos .box-container .box h3 {
+    color: var(--lc);
+    font-size: 2rem;
+    padding: 1rem 0;
+}
+
+.productos .box-container .box .price {
+    color: var(--lc);
+    font-size: 2.5rem;
+    padding: .5rem 0;
+}
+
+.productos .box-container .box .price span {
+    font-size: 1.5rem;
+    text-decoration: line-through;
+    font-weight: lighter;
+}
+
+
+.productos .box-container .box .detal {
+    margin-top: 2rem;
+    color: var(--lc);
+    font-size: 1.7rem;
+    padding: .5rem 0;
+}
+
+
+
+.productos .box-container .box:hover {
+    background: rgb(116, 116, 116);
+}
+
+.productos .box-container .box:hover>* {
+    color: var(--lc);
+}
+
+.offerts .box-container {
+    background-color: var(--bg);
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+    border-radius: 15px;
+}
+
+.offerts .box-container .box {
+    text-align: center;
+    border: var(--border);
+    padding: 2rem;
+    margin: 1rem;
+    border-radius: 15px;
+}
+
+.offerts .box-container .box .iconos a {
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    border: var(--border);
+    color: var(--lc);
+    margin: .3rem;
+}
+
+.offerts .box-container .box .iconos a:hover {
+    background: var(--hv);
+    color: var(--lc);
+}
+
+.offerts .box-container .box .image {
+    padding: 2.5rem 0;
+}
+
+.offerts .box-container .box .image img {
+    height: 25rem;
+}
+
+.offerts .box-container .box .content h3 {
+    color: var(--lc);
+    font-size: 2.5rem;
+}
+
+.offerts .box-container .box .content .stars {
+    padding: 1.5rem;
+}
+
+.offerts .box-container .box .content .stars i {
+    font-size: 1.7rem;
+    color: #efb810;
+}
+
+.offerts .box-container .box .content .price {
+    color: var(--pc);
+    font-size: 2.5rem;
+}
+
+.offerts .box-container .box .content .price span {
+    text-decoration: line-through;
+    font-weight: lighter;
+    font-size: 1.5rem;
+}
+
+.opiniones .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+    background-color: var(--bg);
+    border-radius: 15px;
+}
+
+.opiniones .box-container .box {
+    border: var(--border);
+    text-align: center;
+    padding: 3rem 2rem;
+    margin: 1rem;
+    border-radius: 15px;
+}
+
+.opiniones .box-container .box p {
+    font-size: 1.5rem;
+    line-height: 1.8;
+    color: var(--lc);
+    padding: 2rem 0;
+}
+
+.opiniones .box-container .box .user {
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.opiniones .box-container .box h3 {
+    padding: 1rem 0;
+    font-size: 2rem;
+    color: #fff;
+}
+
+.opiniones .box-container .box .stars i {
+    font-size: 1.5rem;
+    color: #efb810;
+}
+
+.contact .row {
+    display: flex;
+    background: var(--bg);
+    flex-wrap: wrap;
+    gap: 1rem;
+    border-radius: 15px;
+}
+
+.contact .row .map {
+    flex: 1 1 45rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+.contact .row form {
+    flex: 1 1 45rem;
+    padding: 5rem 2rem;
+    text-align: center;
+}
+
+.contact .row form h3 {
+    text-transform: uppercase;
+    font-size: 3.5rem;
+    color: var(--lc);
+}
+
+.contact .row form .inputBox {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background: var(--bg);
+    border: var(--border);
+}
+
+.contact .row form .inputBox span {
+    color: var(--lc);
+    font-size: 2rem;
+    padding-left: 2rem;
+}
+
+.contact .row form .inputBox input {
+    width: 100%;
+    padding: 2rem;
+    font-size: 1.7rem;
+    color: var(--lc);
+    text-transform: none;
+    background: none;
+}
+
+
+.footer {
+    background: black;
+    text-align: center;
+}
+
+.footer .share {
+    padding: 1rem 0;
+}
+
+.footer .share a {
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    color: white;
+    border: var(--border);
+    margin: .3rem;
+    border-radius: 50%;
+}
+
+.footer .share a:hover {
+    background-color: var(--hv);
+}
+
+.footer .enlaces {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    gap: 1rem;
+}
+
+.footer .enlaces a {
+    padding: .7rem 2rem;
+    color: white;
+    border: var(--border);
+    font-size: 2rem;
+}
+
+.footer .enlaces a:hover {
+    background: var(--hv);
+}
+
+.footer .credit {
+    font-size: 2rem;
+    color: var(--hv);
+    font-weight: lighter;
+    padding: 1.5rem;
+}
+
+/* media queries  */
+@media (max-width:991px) {
+
+    html {
+        font-size: 55%;
+    }
+
+    .header {
+        padding: 1.5rem 2rem;
+
+    }
+
+    section {
+        padding: 2rem;
+    }
+
+}
+
+@media (max-width:768px) {
+
+    #menu-btn {
+        display: inline-block;
+    }
+
+    .header .navbar {
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        background: var(--bg);
+        width: 30rem;
+        height: calc(100vh - 9.5rem);
+    }
+
+    .header .navbar.active {
+        right: 0;
+    }
+
+    .header .navbar a {
+        color: var(--lc);
+        display: block;
+        margin: 1.5rem;
+        padding: .5rem;
+        font-size: 2rem;
+    }
+
+    .header .search-form {
+        width: 90%;
+        right: 2rem;
+    }
+
+    .home {
+        background-position: left;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .home .content h3 {
+        font-size: 4.5rem;
+    }
+
+    .home .content p {
+        font-size: 1.5rem;
+    }
+
+}
+
+@media (max-width:450px) {
+
+    html {
+        font-size: 50%;
+    }
+
 }
