--- a/CSS/style.css
+++ b/CSS/style.css
@@ -64,7 +64,7 @@ section {
 }
 
 .heading span {
-    color: var(--pc);
+    color: var(--hv);
     text-transform: uppercase;
 }
 
@@ -385,7 +385,7 @@ section {
 }
 
 .productos .box-container .box .price {
-    color: var(--pc);
+    color: var(--lc);
     font-size: 2.5rem;
     padding: .5rem 0;
 }
