--- a/CSS/style.css
+++ b/CSS/style.css
@@ -339,6 +339,7 @@ section {
 .about .row .image img {
     width: 100%;
     border-radius: 15px;
+    margin-bottom: -0.3%;
 }
 
 .about .row .content {
@@ -691,5 +692,80 @@ section {
     html {
         font-size: 50%;
     }
-
 }
+
+.search{
+    display: inline;
+    align-items: center;
+    text-align: center;
+    font-size: 2rem;
+    text-decoration: none;
+}
+
+.busca{
+    font-size: 2rem;
+    text-align: center;
+}
+
+.derecha{
+    font-size: 2rem;
+    text-align: end;
+}
+
+#logout{
+    color: var(--pc);
+}
+
+#logout:hover{
+    color: var(--hv);
+}
+
+table{
+    font-size: 2rem;
+    align-content: center;
+    background-color: rgb(214, 205, 205);
+    text-align: center;
+    margin-top: 15rem;
+    margin-bottom: 15rem;
+    border-radius: 15px;
+    border: 0.2rem solid var(--pc);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input{
+    font-size: 2rem;
+    border-radius: 15px
+}
+input:hover{
+    color: var(--pc);
+}
+td{
+    border-radius: 15px;
+}
+th{
+    background-color: var(--pc);
+    color: white;
+    border-radius: 15px;
+}
+tr:hover{
+    background-color: var(--pc);
+    color: var(--hv);
+}
+.edit:hover{
+    background-color: var(--hv);
+}
+.delete:hover{
+    background-color: rgba(255, 0, 0, 0.747);
+}
+.save:hover{
+    background-color: cyan;
+}
+.add:hover{
+    background-color: greenyellow;
+}
+
+.save{
+    display: none;
+}
+
